--- a/css/style.css
+++ b/css/style.css
@@ -154,18 +154,13 @@ table { margin-left: 10px; border-collapse: collapse; }
     margin-top: 5%;
 }
 
-/* .up .cirV {
-    margin-top: 2%;
-    margin-left: 12%;
-} */
-
 .cirV {
     width: 500px;
     display: flex;
 }
 
 #cirG {
-    justify-content: center;
+    margin-left: 10%;
 }
 
 .circle {
@@ -200,10 +195,6 @@ table { margin-left: 10px; border-collapse: collapse; }
     height: 200%;
 
 }
-
-/* #cirO {
-    margin-left: 14%;
-} */
 
 .down {
     margin-top: 5%;
@@ -269,7 +260,7 @@ footer {
     font-family: Avenir;
     font-size: 22px;
     color: #272727;
-    margin-top: 12%;
+    margin-top: 9%;
     justify-content: space-between;
     padding: 2%;
     align-items: center;
@@ -296,7 +287,19 @@ footer img {
         }
  }
 
-    @media screen and (width: 1024px) and (height: 1366px) {
+ @media screen and (min-width: 1100px) and (max-width: 1300px) {
+    #btnG, #btnB, #btnO {
+        margin-top: 11%;
+    }
+ }
+
+ @media screen and (min-width: 1000px) and (max-width: 1100px) {
+    #btnG, #btnB, #btnO {
+        margin-top: 13%;
+    }
+ }
+
+@media screen and (width: 1024px) and (height: 1366px) {
     header {
         margin-bottom: 10%;
     }
@@ -337,6 +340,21 @@ footer img {
         margin-left: 2%;
         width: 70%;
    }
+   #btnG, #btnB, #btnO {
+        margin-top: 18%;
+        width: 420px;
+        height: 75px;
+        font-size: 30px;
+   }
+   #btnG {
+    margin-left: 2%;
+   }
+   #btnB {
+    margin-left: -10%;
+   }
+   #btnO {
+    margin-left: -7%;
+   }
    footer{
         width: 100%;
         margin-top: 17%;
@@ -346,7 +364,40 @@ footer img {
    }
  }
 
+ @media screen and (width: 1024px) and (height: 768px) {
+    .logoG, .logoO {
+        width: 70%;
+    }
+  }
 
+ @media screen and (width: 1024px) and (height: 600px) {
+    .logoG, .logoO {
+        width: 70%;
+    }
+  }
+ @media screen and (min-width: 900px) and (max-width: 1000px) {
+    #btnG, #btnB, #btnO {
+        margin-top: 15%;
+    }
+ }
+
+  @media screen and (width: 915px) {
+    #btnG, #btnO {
+        margin-top: 14%;
+    }
+ }
+
+ @media screen and (width: 912px) {
+    #cirG {
+        margin-left: 6%;
+    }
+    #btnG, #btnB, #btnO {
+        margin-top: 16%;
+    }
+    #btnO {
+        margin-left: -17%;
+    }
+ }
  
   @media screen and (width: 1368px) and (height: 912px) {
         footer {
@@ -418,6 +469,15 @@ footer img {
    }
  }
 
+@media screen and (min-width: 800px) and (max-width: 900px) {
+    #btnG, #btnO {
+        margin-top: 16%;
+    }
+    #btnB {
+        margin-top: 17%;
+    }
+ }
+
 @media screen and (min-width: 650px) and (max-width: 800px) {
     .up {
         gap: 0px;
@@ -446,6 +506,13 @@ footer img {
     }
     #cirB {
         height: 22%;
+    }
+    .logoG, .logoO {
+        width: 77%;
+        margin-left: -25%;
+    }
+    #btnG, #btnB, #btnO {
+        margin-top: 14%;
     }
     footer {
         margin-top: 20%;
@@ -483,6 +550,17 @@ footer img {
         justify-content: center;
         margin-top: 10%;
    }
+    #btnG {
+        margin-top: 17%;
+   }
+    #btnB {
+        margin-top: 17%;
+        margin-left: -11%;
+   }
+    #btnO {
+        margin-top: 17%;
+        margin-left: -11%;
+   }
    footer{
         width: 95%;
         margin-top: 35%;
@@ -497,7 +575,8 @@ footer img {
         gap: 0px;
     }
     .logoG, .logoO{
-        width: 75%;
+        width: 80%;
+        margin-left: -25%;
     }
     footer p {
         font-size: 20px;
@@ -540,6 +619,7 @@ footer img {
         justify-content: center;
         margin-top: 40%;
         width: 220%;
+        margin-left: -10%;
    }
    .down {
         margin-left: 0%;
@@ -550,6 +630,18 @@ footer img {
         justify-content: center;
         margin-top: 20%;
         width: 100%;
+        margin-left: -2%;
+   }
+    #btnG {
+        margin-top: 22%;
+   }
+    #btnB {
+        margin-top: 21%;
+        margin-left: -24%;
+   }
+    #btnO {
+        margin-top: 22%;
+        margin-left: -28%;
    }
    footer{
         width: 140%;
@@ -559,6 +651,20 @@ footer img {
         font-size: 17px;
    }
  }
+
+ @media screen and (width: 667px) {
+    .logo img {
+        width: 25%;
+    }
+  }
+
+  @media screen and (min-width: 700px) and (max-width: 750px) {
+    #btnG, #btnB, #btnO {
+        margin-top: 14%;
+        width: 275px;
+        font-size: 22px;
+    } 
+   }
 
   @media screen and (width: 768px) and (height: 1024px) {
     header {
@@ -584,6 +690,7 @@ footer img {
    }
    #cirG {
         width: 220%;
+        margin-left: 4%;
    }
    #cirO {
         justify-content: center;
@@ -595,9 +702,21 @@ footer img {
         padding-left: 25%;
         padding-right: 25%;
    }
-   #cirB {
+    #cirB {
         margin-top: 20%;
         width: 120%;
+    }
+    #btnG {
+        margin-top: 25%;
+        margin-left: 1%;
+   }
+    #btnB {
+        margin-top: 25%;
+        margin-left: 1%;
+   }
+    #btnO {
+        margin-top: 25%;
+        margin-left: -31%;
    }
    footer{
         width: 140%;
@@ -608,12 +727,52 @@ footer img {
    }
  }
 
+  @media screen and (width: 740px) {
+    .logo img {
+        width: 25%;
+    }
+    #authBtn {
+        width: 150px;
+        height: 30px;
+        padding: 0px 5px 25px 5px;
+    }
+  }
+
+ @media screen and (width: 667px) {
+    .logo img {
+        width: 25%;
+    }
+    #authBtn {
+        width: 150px;
+        height: 30px;
+        padding: 0px 5px 25px 5px;
+    }
+    #btnG {
+        width: 250px;
+        margin-top: 15%;
+        margin-left: -1%;
+        font-size: 20px;
+   }
+    #btnB {
+        width: 250px;
+        margin-top: 17%;
+        margin-left: -1%;
+        font-size: 20px;
+   }
+    #btnO {
+        width: 250px;
+        margin-top: 15%;
+        margin-left: -1%;
+        font-size: 20px;
+   }
+  }
+
 @media screen and (max-width: 550px) {
     .logo img{
         width: 30%;
     }
     #authContainer {
-        margin-right: -35%;
+        margin-right: -40%;
     }
    .up {
         display: table;
@@ -632,6 +791,18 @@ footer img {
    #cirB {
         justify-content: center;
         margin-top: 10%;
+   }
+    #btnG {
+        margin-top: 25%;
+        margin-left: -1%;
+   }
+    #btnB {
+        margin-top: 25%;
+        margin-left: -19%;
+   }
+    #btnO {
+        margin-top: 25%;
+        margin-left: -19%;
    }
    footer{
         width: 140%;
@@ -656,13 +827,28 @@ footer img {
    }
    #cirB {
         justify-content: center;
-        margin-top: 40%;
+        margin-top: 48%;
    }
-   footer{
-        width: 170%;
-        font-size: 14px;
-        margin-top: 70%;
+    #btnG {
+        margin-top: 33%;
+        margin-left: -2%;
    }
+    #btnB {
+        margin-top: 33%;
+        margin-left: -27%;
+   }
+    #btnO {
+        margin-top: 33%;
+        margin-left: -27%;
+   }
+    footer {
+        display: table;
+        margin: 130% 60% 0 15%; 
+        text-align: center;
+    }
+    #contact p {
+        font-size: 25px;
+    }
  }
 
  @media screen and (min-width: 410px) and (max-width: 431px) {
@@ -689,12 +875,31 @@ footer img {
         justify-content: center;
         margin-top: 60%;
    }
+       #btnG {
+        margin-top: 37%;
+        margin-left: -2%;
+   }
+    #btnB {
+        margin-top: 37%;
+        margin-left: -29%;
+   }
+    #btnO {
+        margin-top: 37%;
+        margin-left: -29%;
+   }
    footer{
         width: 190%;
         font-size: 12px;
         margin-top: 70%;
+        margin-left: 0%;
    }
  }
+
+  @media screen and (width: 390px) {
+    .content {
+        margin-left: 17%;
+    }
+  }
 
  @media screen and (min-width: 370px) and (max-width: 377px) {
     header {
@@ -718,6 +923,7 @@ footer img {
         width: 190%;
         font-size: 12px;
         margin-top: 60%;
+        margin-left: 0%;
    }
  }
 
@@ -744,6 +950,7 @@ footer img {
         width: 190%;
         font-size: 12px;
         margin-top: 70%;
+        margin-left: 0%;
    }
  }
 
@@ -760,14 +967,29 @@ footer img {
    #cirO {
         justify-content: center;
         margin-top: 50%;
+        margin-left: 2%;
    }
    #cirB {
         justify-content: center;
         margin-top: 80%;
+        margin-left: 2%;
+   }
+    #btnG {
+        margin-top: 40%;
+        margin-left: -3%;
+   }
+    #btnB {
+        margin-top: 40%;
+        margin-left: -33%;
+   }
+    #btnO {
+        margin-top: 40%;
+        margin-left: -33%;
    }
    footer{
         width: 190%;
         font-size: 12px;
         margin-top: 90%;
+        margin-left: 0%;
    }
  }
